# lumen

./: .envrc  .gitignore  CAPABILITIES.md  Makefile  README.md  cabal.project  cabal.project.ci  lumen.cabal
.github/workflows/: ci.yml
app/: Main.hs
docs/: index.md
docs/diagrams/: architecture.md  persistence-flow.md  request-flow.md
docs/explanation/: architecture.md  persistence.md  testing-strategy.md
docs/guides/: adding-a-tool.md  configuration.md  contributing.md  extending-modules.md  testing.md
docs/onboarding/: getting-started.md  guide.md  index.md
docs/reference/: agent-core.md  cli.md  conversation.md  guardrails.md  llm-client.md  prompt-assembly.md  storage.md  tool-catalog.md  tool-runtime.md  types.md
lumen-agent-core/: lumen-agent-core.cabal
lumen-agent-core/app/: Main.hs
lumen-agent-core/src/Lumen/Agent/: Core.hs
lumen-agent-core/test/: Main.hs
lumen-agent-core/test/Test/: AgentCore.hs
lumen-code-intelligence/: lumen-code-intelligence.cabal
lumen-code-intelligence/src/Lumen/Code/: Intelligence.hs
lumen-conversation-system/: lumen-conversation-system.cabal
lumen-conversation-system/src/Lumen/Conversation/: Core.hs
lumen-conversation-system/test/: Main.hs
lumen-conversation-system/test/Test/: Conversation.hs
lumen-external-integrations/: lumen-external-integrations.cabal
lumen-llm-core/: LICENSE  lumen-llm-core.cabal
lumen-llm-core/src/Lumen/LLM/: Client.hs  PromptAssembly.hs
lumen-llm-core/test/: Main.hs
lumen-llm-core/test/Test/: PromptAssembly.hs
lumen-planning/: lumen-planning.cabal
lumen-planning/src/Lumen/Planning/: Core.hs
lumen-runtime-foundation/: lumen-runtime-foundation.cabal
lumen-runtime-foundation/src/Lumen/Foundation/: Storage.hs  Types.hs
lumen-runtime-foundation/test/: Main.hs
lumen-runtime-foundation/test-support/Test/: Generators.hs
lumen-runtime-foundation/test/Test/: Storage.hs  Types.hs
lumen-tool-framework/: lumen-tool-framework.cabal
lumen-tool-framework/src/Lumen/Tools/: Catalog.hs  Guardrails.hs  Runtime.hs
lumen-tool-framework/test/: Main.hs
lumen-tool-framework/test/Test/: Guardrails.hs  GuardrailsHelpers.hs  OrderedMap.hs  SchemaInputs.hs  SchemaSerialization.hs  ToolCatalog.hs  ToolRuntime.hs
src/: AgentCore.hs  Conversation.hs  Guardrails.hs  LLMClient.hs  PromptAssembly.hs  Storage.hs  ToolCatalog.hs  ToolRuntime.hs  Types.hs
test/: Main.hs
test/Test/: AgentCore.hs  Conversation.hs  Generators.hs  Guardrails.hs  GuardrailsHelpers.hs  OrderedMap.hs  PromptAssembly.hs  SchemaInputs.hs  SchemaSerialization.hs  Storage.hs  ToolCatalog.hs  ToolRuntime.hs  Types.hs
