cabal-version:      3.0
name:               lumen-runtime-foundation
version:            0.1.0.0
synopsis:           Lumen — Runtime Foundation (Types, Storage)
description:        Leaf package. Provides shared Types and Storage.
                    Stubs for Caching, Error Recovery, Telemetry,
                    Stream Processing, and Configuration Management
                    will be added in later phases.
license:            MIT
license-file:       LICENSE
author:             Geoffrey Noël
maintainer:         noel.geoff@gmail.com
category:           Development
build-type:         Simple

common shared-properties
    default-language: GHC2021
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wunused-packages
    default-extensions:
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:
        Lumen.Foundation.Types
        Lumen.Foundation.Storage
    build-depends:
        base >=4.18 && <5,
        anthropic-types,
        anthropic-protocol,
        aeson >=2.1,
        text >=2.0,
        filepath >=1.4,
        directory >=1.3,
        time >=1.12

-- Shared Hedgehog generators for all Lumen test suites.
-- Depend on this component as: lumen-runtime-foundation:lumen-test-generators
library lumen-test-generators
    import:           shared-properties
    visibility:       public
    hs-source-dirs:   test-support
    exposed-modules:  Test.Generators
    build-depends:
        base >=4.18 && <5,
        lumen-runtime-foundation,
        anthropic-types,
        anthropic-protocol,
        hedgehog >=1.4,
        text >=2.0,
        time >=1.12

test-suite lumen-runtime-foundation-test
    import:           shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Test.Types
        Test.Storage
    build-depends:
        base >=4.18 && <5,
        lumen-runtime-foundation,
        lumen-runtime-foundation:lumen-test-generators,
        hedgehog >=1.4,
        tasty >=1.4,
        tasty-hedgehog >=1.4,
        aeson >=2.1,
        text >=2.0
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
