cabal-version:      3.0
name:               lumen-tool-framework
version:            0.1.0.0
synopsis:           Lumen — Tool Framework (Guardrails, Catalog, Runtime)
description:        Tool execution, safety validation, and tool catalog.
license:            MIT
license-file:       LICENSE
author:             Geoffrey Noël
maintainer:         noel.geoff@gmail.com
category:           Development
build-type:         Simple

common shared-properties
    default-language: GHC2021
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wunused-packages
    default-extensions:
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:
        Lumen.Tools.Guardrails
        Lumen.Tools.Catalog
        Lumen.Tools.Runtime
    build-depends:
        base >=4.18 && <5,
        lumen-runtime-foundation,
        anthropic-types,
        anthropic-protocol,
        anthropic-tools-common,
        text >=2.0,
        filepath >=1.4

test-suite lumen-tool-framework-test
    import:           shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Test.Guardrails
        Test.GuardrailsHelpers
        Test.ToolCatalog
        Test.ToolRuntime
        Test.SchemaInputs
        Test.OrderedMap
        Test.SchemaSerialization
    build-depends:
        base >=4.18 && <5,
        lumen-runtime-foundation,
        lumen-tool-framework,
        hedgehog >=1.4,
        tasty >=1.4,
        tasty-hedgehog >=1.4,
        anthropic-types,
        anthropic-protocol,
        anthropic-tools-common,
        json-schema-combinators,
        aeson,
        text >=2.0,
        filepath >=1.4,
        containers,
        scientific
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
